force-app/main/default/objects/ZipSegmentCriteriaLink__c/ZipSegmentCriteriaLink__c.object-meta.xml
<CustomObject>
    <description>Link between the zip segment and the criteria</description>
    <label>Zip Segment Criteria Link</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Segment Criteria Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>