force-app/main/default/objects/ZipSegmentCriteriaLink__c/fields/ZipLinkJoin__c.field-meta.xml
<CustomField>
    <fullName>ZipLinkJoin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Is this linked to another join record (so they&apos;ll both be evaluated together)?</inlineHelpText>
    <label>Zip Link Join</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The links have to be linked to the same zip segment</errorMessage>
        <filterItems>
            <field>$Source.ZipSegment__c</field>
            <operation>equals</operation>
            <valueField>$Source.ZipSegment__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ZipSegmentCriteriaLink__c</referenceTo>
    <relationshipLabel>Zip Segment Criteria Links</relationshipLabel>
    <relationshipName>ZipSegmentCriteriaLinksOr</relationshipName>
    <type>Lookup</type>
</CustomField>