force-app/main/default/objects/ZipSegmentCriteriaLink__c/fields/ZipLinkJoinType__c.field-meta.xml
<CustomField>
    <fullName>ZipLinkJoinType__c</fullName>
    <inlineHelpText>If two links are joined together, what type of join do they have?</inlineHelpText>
    <label>Zip Link Join Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>