force-app/main/default/objects/ZipSegmentCriteriaLink__c/fields/ZipSegment__c.field-meta.xml
<CustomField>
    <fullName>ZipSegment__c</fullName>
    <inlineHelpText>The Zip Segment the criteria is for</inlineHelpText>
    <label>Zip Segment</label>
    <referenceTo>Zip_Segment__c</referenceTo>
    <relationshipLabel>Zip Segment Criteria Links</relationshipLabel>
    <relationshipName>ZipSegmentCriteriaLinks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>