force-app/main/default/objects/ZipSegmentCriteriaLink__c/fields/ZipSegmentCriteria__c.field-meta.xml
<CustomField>
    <fullName>ZipSegmentCriteria__c</fullName>
    <inlineHelpText>The criteria for the Zip Segment</inlineHelpText>
    <label>Zip Segment Criteria</label>
    <referenceTo>ZipSegmentCriteria__c</referenceTo>
    <relationshipLabel>Zip Segment Criteria Links</relationshipLabel>
    <relationshipName>ZipSegmentCriteriaLinks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>