force-app/main/default/objects/ZipSegmentCriteriaLink__c/fields/ZipSegmentJoinType__c.field-meta.xml
<CustomField>
    <fullName>ZipSegmentJoinType__c</fullName>
    <inlineHelpText>What type of join is this with the segment criteria?</inlineHelpText>
    <label>Zip Segment Join Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>